--- a/public/scss/projects.scss
+++ b/public/scss/projects.scss
@@ -84,3 +84,7 @@
 	margin-bottom: 30px;
 	color: #FFF;
 }
+
+.project-subtitle-value {
+	margin-left: 10px;
+}
